--- a/service-client/src/app/app.component.html
+++ b/service-client/src/app/app.component.html
@@ -5,7 +5,7 @@
   [revealMode]="'slide'"
   template="template"
   [(opened)]="isDrawerOpen"
-  [height]="400"
+  height="calc(100% - 40px)"
   [closeOnOutsideClick]="true"
 >
   <div *dxTemplate="let data of 'template'" style="width: 200px">
