add shop service and ws messaging

--- a/service-client/src/app/app.component.html
+++ b/service-client/src/app/app.component.html
@@ -8,7 +8,7 @@
   height="calc(100% - 40px)"
   [closeOnOutsideClick]="true"
 >
-  <div *dxTemplate="let data of 'template'" style="width: 200px">
+  <div *dxTemplate="let data of 'template'" style="width: 200px; height:100%">
     <dx-tree-view
       class="panel-list dx-theme-accent-as-background-color"
       [dataSource]="navigationItems"
@@ -17,6 +17,7 @@
       [focusStateEnabled]="false"
       expandEvent="click"
       [expandAllEnabled]="false"
+      [height]="'100%'"
       (onItemClick)="onItemClick($event)"
     >
     </dx-tree-view>
