--- a/service-client/src/styles.scss
+++ b/service-client/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+.spacer-left{
+  margin-left: 5px !important;
+}
+
+.spacer-right{
+  margin-right: 5px !important;
+}
+
+.spacer-top{
+  margin-top:10px !important;
+}
+
+.spacer-bottom{
+  margin-bottom: 10px !important;
+}
