--- a/service-client/src/app/pages/order-details/order-details.component.html
+++ b/service-client/src/app/pages/order-details/order-details.component.html
@@ -14,7 +14,7 @@
         </div>
         <div class="dx-field">
           <div class="dx-field-label">Order status</div>
-          <div class="dx-field-value-static">{{order.status | uppercase}}</div>
+          <div class="dx-field-value-static">{{order.status | orderStatus}}</div>
         </div>
         <div class="dx-field">
           <div class="dx-field-label">Order notes</div>
@@ -24,27 +24,32 @@
       </div>
       <div class="dx-fieldset" *ngIf="order.status != 'sent'">
         <div class="dx-fieldset-header">Order Parts and Materials</div>
-        <dx-button type="primary" text="Add" (onClick)="addMaterials()" *ngIf="order.status == 'vehicleReceived'"></dx-button>
-        <div class="dx-field flex" *ngFor="let item of order.materials">
-          <dx-select-box class="dx-field-value" label="Category" labelMode="floating" [readOnly]="order.status == 'waitingMaterials'"  [(value)]="item.category" [dataSource]="['Body', 'Electrics','Mechanics']"></dx-select-box>
-          <dx-text-box class="dx-field-value" label="Name" labelMode="floating" [readOnly]="order.status == 'waitingMaterials'"  [(value)]="item.name"></dx-text-box>
-          <dx-text-box class="dx-field-value" label="Details" labelMode="floating" [readOnly]="order.status == 'waitingMaterials'" [(value)]="item.details"></dx-text-box>
+        <dx-button type="primary" class="spacer-top" text="Add" (onClick)="addMaterials()" *ngIf="order.status == 'vehicleReceived'"></dx-button>
+        <div class="dx-field spacer-bottom" *ngFor="let item of order.materials">
+          <dx-select-box class="dx-field-value spacer-left" label="Category" labelMode="floating" [readOnly]="order.status == 'partsOrdered'"  [(value)]="item.category" [dataSource]="['Body', 'Electrics','Mechanics']"></dx-select-box>
+          <dx-text-box class="dx-field-value spacer-left" label="Name" labelMode="floating" [readOnly]="order.status == 'partsOrdered'"  [(value)]="item.name"></dx-text-box>
+          <dx-text-box class="dx-field-value spacer-left" label="Details" labelMode="floating" [readOnly]="order.status == 'partsOrdered'" [(value)]="item.details"></dx-text-box>
           <dx-button type="danger" icon="trash" (onClick)="deleteMaterials(item)" *ngIf="order.status == 'vehicleReceived'"></dx-button>
         </div>
-        <dx-button type="primary" text="Save" *ngIf="order.materials && order.materials.length > 0 && order.status == 'vehicleReceived'" (onClick)="saveMaterialsOrder()"></dx-button>
-        <dx-button type="default" text="Send" *ngIf="order.materials && order.materials.length > 0 && order.status == 'vehicleReceived'" (onClick)="sendMaterialsOrder()"></dx-button>
+        <dx-button type="primary" class="spacer-top spacer-right" text="Save" *ngIf="order.materials && order.materials.length > 0 && order.status == 'vehicleReceived'" (onClick)="saveMaterialsOrder()"></dx-button>
+        <dx-button type="default" class="spacer-top spacer-left" text="Send" *ngIf="order.materials && order.materials.length > 0 && order.status == 'vehicleReceived'" (onClick)="sendMaterialsOrder()"></dx-button>
       </div>
       <div class="dx-fieldset" id="notes-container">
-        <div class="dx-fieldset-header">Field Set with Custom Value Width</div>
+        <div class="dx-fieldset-header">Order completed</div>
         <div class="dx-field">
           <div class="dx-field-label">Notes</div>
           <dx-text-area
             class="dx-field-value"
             [height]="80"
-            value="Kevin is our hard-working shipping manager and has been helping that department work like clockwork for 18 months. When not in the office, he is usually on the basketball court playing pick-up games."
+            [(value)]="order.notes"
           >
           </dx-text-area>
         </div>
+        <div class="dx-field">
+          <div class="dx-field-label">Closed date</div>
+          <div class="dx-field-value-static">{{order.dateCompleted | date:'dd.MM.yyyy' }}</div>
+        </div>
+        <dx-button [visible]="order.status != 'closed'" type="success" text="Finalize" (onClick)="finalizeOrder()"></dx-button>
       </div>
     </div>
   </div>
